custom/istio/ingress-gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
  namespace: istio-system
spec:
  selector:
    istio: appingressgateway
  servers:
    - port:
        name: http
        number: 80
        protocol: http     
      hosts:
        - "example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-vs
  namespace: istio-system
spec:
  hosts:
  - "example.com"
  gateways:
  - app-gateway
  http:
  - name: http
    match:
    - port: 80
    route:
    - destination:
        host: app.work.svc.cluster.local
        port:
          number: 8080
